WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130429
Page::setPageScaleFactor should not force the scroll view position when using delegatesScrolling()
https://bugs.webkit.org/show_bug.cgi?id=130429
Summary
Page::setPageScaleFactor should not force the scroll view position when using...
Benjamin Poulain
Reported
2014-03-18 15:26:51 PDT
Page::setPageScaleFactor should not force the scroll view position when using delegatesScrolling()
Attachments
Patch
(2.15 KB, patch)
2014-03-18 15:29 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-03-18 15:29:17 PDT
Created
attachment 227119
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-03-18 15:33:18 PDT
Didn't I do this already?
Benjamin Poulain
Comment 3
2014-03-19 13:42:09 PDT
Comment on
attachment 227119
[details]
Patch Clearing flags on attachment: 227119 Committed
r165913
: <
http://trac.webkit.org/changeset/165913
>
Benjamin Poulain
Comment 4
2014-03-19 13:42:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug