Page::setPageScaleFactor should not force the scroll view position when using delegatesScrolling() https://bugs.webkit.org/show_bug.cgi?id=130429

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-03-19
Reviewed by Simon Fraser.

When setting the same scale mutliple time (for example on load), Page was asking the top scrollview
to scroll to the origin. This is bogus since the scroll view is driving Page::setDeviceScaleFactor,
not the other way around.

Simon fixed the general case in http://trac.webkit.org/changeset/165652/trunk/Source/WebCore/page/Page.cpp
but this branch was still scrolling content.

* page/Page.cpp:
(WebCore::Page::setPageScaleFactor):


Canonical link: https://commits.webkit.org/148462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165913 268f45cc-cd09-0410-ab3c-d52691b4dbfc